# defaultsettle-cli

./: .gitignore  EGRESS.md  README.md  SECURITY.md  pyproject.toml
defaultsettle/: __init__.py  cli.py  registry_snapshot.py  sar-keys-snapshot.json
defaultsettle/portable_sar/: portable_sar_verify.py
defaultsettle/portable_sar/fixtures/: portable-sar-fixture-keys.json  portable-sar-fixtures.json
examples/: activation.json  receipt.json
reports/speedrun/: defaultsettle-speedrun-20260608-160425.json
tests/: test_cli.py  test_verify_portable.py
tests/fixtures/: sar-402-canonical-demo.json  sar-402-tampered.json  sar-v0.1-current-kid03.json  sar-v0.1-current-kid05.json  sar-v0.1-fail.json  sar-v0.1-indeterminate.json  sar-v0.1-pass.json  tampered-receipt.json
