[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "defaultsettle"
version = "0.1.0"
description = "CLI for generating signed receipts for AI-agent actions in seconds."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = [
    "ai-agents",
    "verification",
    "receipts",
    "trust",
    "cli",
    "provenance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://defaultverifier.com"

[project.scripts]
defaultsettle = "defaultsettle.cli:main"

[tool.setuptools]
packages = ["defaultsettle"]
